Дипломный проект. Этап 3. Дополнительная функциональность: комментарии к событиям;. 1) Создал ветку feature_comments. 2) Добавил функциональность comment. 3) Добавил постман feature. 4) Добавил Сервис CommentServiceImpl. 5) Обновил постман-тесты feature. 6) Обновил функциональность comment. 7) Добавил ссылку на пул-реквест. 8) Вывел паттерн даты в отдельную константу. 9) В EventServiceImpl все длинные стримы разбиты на несколько строк, улучшена структура и добавлены разделения, для улучшения читаемости.